// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/ComboboxInput Compact 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-form-item"
  >
    <div
      className="fd-popover"
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <div
            aria-expanded={false}
            aria-haspopup="listbox"
            aria-owns="compactComboboxExample-listbox"
            id="compactComboboxExample-combobox"
            role="combobox"
          >
            <div
              className="fd-input-group--control fd-input-group"
              onClick={[Function]}
            >
              <input
                aria-autocomplete="list"
                aria-controls="compactComboboxExample-listbox"
                aria-label="Compact"
                autoComplete="off"
                className="fd-input fd-input--compact fd-input-group__input"
                id="compactComboboxExample-input"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder="Enter country"
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/ComboboxInput Dev 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-container"
  >
    <div
      className="fd-row"
    >
      <div
        className="fd-col fd-col--4 fd-col-md--4 fd-col-lg--4 fd-col-xl--4"
      >
        <div>
          <button
            className="fd-button"
            type="button"
          >
            <span
              className="fd-button__text"
            >
              Dummy
            </span>
          </button>
        </div>
      </div>
      <div
        className="fd-col fd-col--4 fd-col-md--4 fd-col-lg--4 fd-col-xl--4"
      >
        <div>
          <label
            className="fd-form-label"
            onKeyDown={[Function]}
          >
            Use custom option renderer
          </label>
          <label
            className="fd-switch__label"
          >
            <span
              className="fd-switch fd-switch--compact"
            >
              <input
                aria-checked={false}
                aria-label="Switch"
                checked={false}
                className="fd-switch__input"
                onChange={[Function]}
                type="checkbox"
              />
              <div
                className="fd-switch__wrapper"
              >
                <div
                  className="fd-switch__track"
                >
                  <span
                    className="fd-switch__handle"
                    role="presentation"
                  />
                </div>
              </div>
            </span>
          </label>
          Selected country code: 
          none
          <br />
          <div
            className="fd-form-group"
          >
            <div
              className="fd-form-item fd-form-item--horizontal"
            >
              <label
                className="fd-form-label"
                htmlFor="comboboxDevExample"
              >
                Country
              </label>
              <br />
              <div
                className="fd-form-item"
              >
                <div
                  className="fd-popover"
                >
                  <div
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="fd-popover__control"
                    >
                      <div
                        aria-expanded={false}
                        aria-haspopup="listbox"
                        aria-owns="comboboxDevExample-listbox"
                        id="comboboxDevExample-combobox"
                        role="combobox"
                      >
                        <div
                          className="fd-input-group--control fd-input-group"
                          onClick={[Function]}
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="comboboxDevExample-listbox"
                            autoComplete="off"
                            className="fd-input fd-input-group__input"
                            disabled={false}
                            id="comboboxDevExample-input"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onKeyDown={[Function]}
                            placeholder="Enter country"
                            required={false}
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <button
                className="fd-button"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="fd-button__text"
                >
                  Clear
                </span>
                <i
                  aria-hidden={true}
                  className="sap-icon--decline"
                  role="img"
                />
              </button>
            </div>
          </div>
          <div
            className="fd-container"
          />
        </div>
      </div>
      <div
        className="fd-col fd-col--4 fd-col-md--4 fd-col-lg--4 fd-col-xl--4"
      >
        <div>
          <button
            className="fd-button"
            type="button"
          >
            <span
              className="fd-button__text"
            >
              Dummy
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/ComboboxInput Disabled 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-form-item"
  >
    <div
      className="fd-popover"
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <div
            aria-expanded={false}
            aria-haspopup="listbox"
            aria-owns="disabledComboboxExample-listbox"
            id="disabledComboboxExample-combobox"
            role="combobox"
          >
            <div
              className="fd-input-group--control is-disabled fd-input-group is-disabled"
              onClick={[Function]}
            >
              <input
                aria-autocomplete="list"
                aria-controls="disabledComboboxExample-listbox"
                aria-label="Disabled"
                autoComplete="off"
                className="fd-input fd-input-group__input"
                disabled={true}
                id="disabledComboboxExample-input"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder="Enter country"
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/ComboboxInput Pre Selected Key 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-container"
  >
    <div
      className="fd-row"
    >
      <div
        className="fd-col fd-col--4 fd-col-md--4 fd-col-lg--4 fd-col-xl--4"
      >
        <div
          className="fd-form-item"
        >
          <label
            className="fd-form-label"
            id="preSelectedKeyComboboxExample-label"
          >
            Pre Selected Combobox
          </label>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <div
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  aria-owns="preSelectedKeyComboboxExample-listbox"
                  id="preSelectedKeyComboboxExample-combobox"
                  role="combobox"
                >
                  <div
                    className="fd-input-group--control fd-input-group"
                    onClick={[Function]}
                  >
                    <input
                      aria-autocomplete="both"
                      aria-controls="preSelectedKeyComboboxExample-listbox"
                      aria-labelledby="preSelectedKeyComboboxExample-label"
                      autoComplete="nope"
                      className="fd-input fd-input-group__input"
                      id="preSelectedKeyComboboxExample-input"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onKeyDown={[Function]}
                      placeholder="Enter country"
                      type="text"
                    />
                    <span
                      className="fd-input-group__addon fd-input-group__addon--button"
                    >
                      <button
                        aria-label="Show country options"
                        className="fd-button fd-button--transparent fd-input-group__button"
                        id="preSelectedKeyComboboxExample-combobox-arrow"
                        onClick={[Function]}
                        tabIndex="-1"
                        type="button"
                      >
                        <i
                          aria-hidden={true}
                          className="sap-icon--navigation-down-arrow"
                          role="img"
                        />
                      </button>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <small>
          Clear the field to see more options
        </small>
      </div>
      <div
        className="fd-col fd-col--4 fd-col-md--4 fd-col-lg--4 fd-col-xl--4"
      />
      <div
        className="fd-col fd-col--4 fd-col-md--4 fd-col-lg--4 fd-col-xl--4"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/ComboboxInput Primary 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-form-item"
  >
    <label
      className="fd-form-label"
      id="primaryComboboxExample-label"
    >
      Default
    </label>
    <div
      className="fd-popover"
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <div
            aria-expanded={false}
            aria-haspopup="listbox"
            aria-owns="primaryComboboxExample-listbox"
            id="primaryComboboxExample-combobox"
            role="combobox"
          >
            <div
              className="fd-input-group--control fd-input-group"
              onClick={[Function]}
            >
              <input
                aria-autocomplete="list"
                aria-controls="primaryComboboxExample-listbox"
                aria-labelledby="primaryComboboxExample-label"
                autoComplete="off"
                className="fd-input fd-input-group__input"
                id="primaryComboboxExample-input"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder="Enter country"
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/ComboboxInput Selection Type 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-container"
  >
    <div
      className="fd-row"
    >
      <div
        className="fd-col fd-col--4 fd-col-md--4 fd-col-lg--4 fd-col-xl--4"
      >
        <div>
          Selected country code: 
          none
          <br />
          <div
            className="fd-form-item"
          >
            <label
              className="fd-form-label"
              id="comboboxManualSelectExample-label"
            >
              Country (Manual Select)
            </label>
            <div
              className="fd-popover"
            >
              <div
                onFocus={[Function]}
                onMouseDown={[Function]}
                onTouchStart={[Function]}
              >
                <div
                  className="fd-popover__control"
                >
                  <div
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-owns="comboboxManualSelectExample-listbox"
                    id="comboboxManualSelectExample-combobox"
                    role="combobox"
                  >
                    <div
                      className="fd-input-group--control fd-input-group"
                      onClick={[Function]}
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls="comboboxManualSelectExample-listbox"
                        aria-labelledby="comboboxManualSelectExample-label"
                        autoComplete="nope"
                        className="fd-input fd-input-group__input"
                        id="comboboxManualSelectExample-input"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onKeyDown={[Function]}
                        placeholder="🔎   Enter Country Name"
                        type="text"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-col fd-col--4 fd-col-md--4 fd-col-lg--4 fd-col-xl--4"
      >
        <div>
          Selected country code: 
          none
          <br />
          <div
            className="fd-form-item"
          >
            <label
              className="fd-form-label"
              id="comboboxAutoSelectExample-label"
            >
              Country (Auto Select)
            </label>
            <div
              className="fd-popover"
            >
              <div
                onFocus={[Function]}
                onMouseDown={[Function]}
                onTouchStart={[Function]}
              >
                <div
                  className="fd-popover__control"
                >
                  <div
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-owns="comboboxAutoSelectExample-listbox"
                    id="comboboxAutoSelectExample-combobox"
                    role="combobox"
                  >
                    <div
                      className="fd-input-group--control fd-input-group"
                      onClick={[Function]}
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls="comboboxAutoSelectExample-listbox"
                        aria-labelledby="comboboxAutoSelectExample-label"
                        autoComplete="nope"
                        className="fd-input fd-input-group__input"
                        id="comboboxAutoSelectExample-input"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onKeyDown={[Function]}
                        placeholder="🔎   Enter Country Name"
                        type="text"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-col fd-col--4 fd-col-md--4 fd-col-lg--4 fd-col-xl--4"
      >
        <div>
          Selected country code: 
          none
          <br />
          <div
            className="fd-form-item"
          >
            <label
              className="fd-form-label"
              id="comboboxAutoInlineSelectExample-label"
            >
              Country (Auto Select and Inline Auto Complete)
            </label>
            <div
              className="fd-popover"
            >
              <div
                onFocus={[Function]}
                onMouseDown={[Function]}
                onTouchStart={[Function]}
              >
                <div
                  className="fd-popover__control"
                >
                  <div
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-owns="comboboxAutoInlineSelectExample-listbox"
                    id="comboboxAutoInlineSelectExample-combobox"
                    role="combobox"
                  >
                    <div
                      className="fd-input-group--control fd-input-group"
                      onClick={[Function]}
                    >
                      <input
                        aria-autocomplete="both"
                        aria-controls="comboboxAutoInlineSelectExample-listbox"
                        aria-labelledby="comboboxAutoInlineSelectExample-label"
                        autoComplete="nope"
                        className="fd-input fd-input-group__input"
                        id="comboboxAutoInlineSelectExample-input"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onKeyDown={[Function]}
                        placeholder="🔎   Enter Country Name"
                        type="text"
                      />
                      <span
                        className="fd-input-group__addon fd-input-group__addon--button"
                      >
                        <button
                          aria-label="Show country options"
                          className="fd-button fd-button--transparent fd-input-group__button"
                          id="comboboxAutoInlineSelectExample-combobox-arrow"
                          onClick={[Function]}
                          tabIndex="-1"
                          type="button"
                        >
                          <i
                            aria-hidden={true}
                            className="sap-icon--navigation-down-arrow"
                            role="img"
                          />
                        </button>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/ComboboxInput Validation State 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-container"
  >
    <div
      className="fd-row"
    >
      <div
        className="fd-col fd-col--3 fd-col-md--3 fd-col-lg--3 fd-col-xl--3"
      >
        <div
          className="fd-form-item"
        >
          <label
            aria-required={true}
            className="fd-form-label fd-form-label--required"
            id="errorComboboxExample-label"
          >
            Combobox with error
          </label>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <div
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  aria-owns="errorComboboxExample-listbox"
                  id="errorComboboxExample-combobox"
                  role="combobox"
                >
                  <div
                    className="fd-popover"
                    onBlur={[Function]}
                    onFocus={[Function]}
                  >
                    <div
                      onFocus={[Function]}
                      onMouseDown={[Function]}
                      onTouchStart={[Function]}
                    >
                      <div
                        className="fd-popover__control"
                      >
                        <div
                          className="fd-input-group--control is-error fd-input-group is-error"
                          onClick={[Function]}
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="errorComboboxExample-listbox"
                            aria-labelledby="errorComboboxExample-label"
                            autoComplete="off"
                            className="fd-input fd-input-group__input"
                            id="errorComboboxExample-input"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onKeyDown={[Function]}
                            placeholder="Enter country"
                            required={true}
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-col fd-col--3 fd-col-md--3 fd-col-lg--3 fd-col-xl--3"
      >
        <div
          className="fd-form-item"
        >
          <label
            className="fd-form-label"
            id="warningComboboxExample-label"
          >
            Combobox with warning
          </label>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <div
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  aria-owns="warningComboboxExample-listbox"
                  id="warningComboboxExample-combobox"
                  role="combobox"
                >
                  <div
                    className="fd-popover"
                    onBlur={[Function]}
                    onFocus={[Function]}
                  >
                    <div
                      onFocus={[Function]}
                      onMouseDown={[Function]}
                      onTouchStart={[Function]}
                    >
                      <div
                        className="fd-popover__control"
                      >
                        <div
                          className="fd-input-group--control is-warning fd-input-group is-warning"
                          onClick={[Function]}
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="warningComboboxExample-listbox"
                            aria-labelledby="warningComboboxExample-label"
                            autoComplete="off"
                            className="fd-input fd-input-group__input"
                            id="warningComboboxExample-input"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onKeyDown={[Function]}
                            placeholder="Enter country"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-col fd-col--3 fd-col-md--3 fd-col-lg--3 fd-col-xl--3"
      >
        <div
          className="fd-form-item"
        >
          <label
            className="fd-form-label"
            id="infoComboboxExample-label"
          >
            Combobox with information
          </label>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <div
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  aria-owns="infoComboboxExample-listbox"
                  id="infoComboboxExample-combobox"
                  role="combobox"
                >
                  <div
                    className="fd-popover"
                    onBlur={[Function]}
                    onFocus={[Function]}
                  >
                    <div
                      onFocus={[Function]}
                      onMouseDown={[Function]}
                      onTouchStart={[Function]}
                    >
                      <div
                        className="fd-popover__control"
                      >
                        <div
                          className="fd-input-group--control is-information fd-input-group is-information"
                          onClick={[Function]}
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="infoComboboxExample-listbox"
                            aria-labelledby="infoComboboxExample-label"
                            autoComplete="off"
                            className="fd-input fd-input-group__input"
                            id="infoComboboxExample-input"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onKeyDown={[Function]}
                            placeholder="Enter country"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-col fd-col--3 fd-col-md--3 fd-col-lg--3 fd-col-xl--3"
      >
        <div
          className="fd-form-item"
        >
          <label
            className="fd-form-label"
            id="successComboboxExample-label"
          >
            Combobox with success
          </label>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <div
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  aria-owns="successComboboxExample-listbox"
                  id="successComboboxExample-combobox"
                  role="combobox"
                >
                  <div
                    className="fd-popover"
                    onBlur={[Function]}
                    onFocus={[Function]}
                  >
                    <div
                      onFocus={[Function]}
                      onMouseDown={[Function]}
                      onTouchStart={[Function]}
                    >
                      <div
                        className="fd-popover__control"
                      >
                        <div
                          className="fd-input-group--control is-success fd-input-group is-success"
                          onClick={[Function]}
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="successComboboxExample-listbox"
                            aria-labelledby="successComboboxExample-label"
                            autoComplete="off"
                            className="fd-input fd-input-group__input"
                            id="successComboboxExample-input"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onKeyDown={[Function]}
                            placeholder="Enter country"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
